# moros

./: .gitignore  Cargo.toml  README.md  Scarb.toml  package-lock.json  package.json  vercel.json
app/: .env.example  index.html  package.json  tsconfig.app.json  vercel.json  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
app/src/components/: AppErrorBoundary.tsx  AppShell.test.tsx  AppShell.tsx  ConnectedVipProgressCard.test.tsx  ConnectedVipProgressCard.tsx  DepositModal.test.tsx  DepositModal.tsx  DepositRouterPanel.test.tsx  DepositRouterPanel.tsx  DiceProbabilitySlider.tsx  FundingPromptDialog.tsx  GameUtilityBar.tsx  LeaderboardPanel.test.tsx  LeaderboardPanel.tsx  MorosAuthDialog.test.tsx  MorosAuthDialog.tsx  MorosAuthProvider.tsx  MorosPrivyRuntime.tsx  NavIcon.tsx  OriginalsFairnessStepper.tsx  PlayingCard.tsx  ProgressStepper.tsx  SettingsDrawer.tsx  StatusPill.tsx  ToastViewport.tsx  VaultModal.tsx  VipProgressCard.test.tsx  VipProgressCard.tsx  WithdrawModal.tsx  moros-auth-context.tsx
app/src/components/dice/: DiceHistoryPanel.tsx  DiceStrategyEditor.tsx
app/src/hooks/: useDiceGame.ts  useFocusTrap.ts  useMorosWallet.ts  useOriginalsCommitment.ts  useServices.ts  useTableState.ts  useUsernameAvailability.ts
app/src/lib/: account-state.test.ts  account-state.ts  api.test.ts  api.ts  blackjack-presentation.ts  config.test.ts  config.ts  dice-strategy.ts  format.ts  game-balance.ts  game-config.ts  game-rules.ts  gameplay-session.ts  poseidon.ts  privy-auth.test.ts  privy-auth.ts  privy-bridge.ts  random.ts  starkzap-finance.ts  starkzap-loader.ts  starkzap-runtime.ts  starkzap-types.ts  starkzap.ts  wallet-errors.ts  wallet-types.ts
app/src/pages/: BaccaratPage.test.tsx  BaccaratPage.tsx  BlackjackPage.test.tsx  BlackjackPage.tsx  DicePage.test.tsx  DicePage.tsx  LeaderboardPage.tsx  LobbyPage.test.tsx  LobbyPage.tsx  PublicProfilePage.test.tsx  PublicProfilePage.tsx  RewardsPage.test.tsx  RewardsPage.tsx  RoulettePage.test.tsx  RoulettePage.tsx
app/src/store/: account.ts  game.ts  profile.ts  toast.ts  ui.ts  wallet.ts
app/src/test/: starkzap.ts
circuits/blackjack/: dealer_peek_no_blackjack.circom
contracts/: Scarb.toml
contracts/src/: bankroll_vault.cairo  dealer_commitment.cairo  deck_commitment.cairo  interfaces.cairo  lib.cairo  rewards_treasury.cairo  session_registry.cairo  table_registry.cairo  types.cairo
contracts/src/blackjack_peek_verifier/: groth16_verifier_constants.cairo
contracts/src/games/: baccarat_table.cairo  blackjack_logic.cairo  blackjack_table.cairo  dice_table.cairo  roulette_table.cairo
contracts/tests/: test_baccarat_table.cairo  test_bankroll_vault.cairo  test_blackjack_logic.cairo  test_blackjack_table.cairo  test_dice_table.cairo  test_rewards_treasury.cairo  test_roulette_table.cairo
contracts/tests/fixtures/: blackjack_peek_fixture.json  blackjack_peek_proof_calldata.txt
services/: .env.example
services/blackjack-prover/: Cargo.toml
services/blackjack-prover/src/: lib.rs  main.rs
services/blackjack-verifier/: Cargo.toml
services/blackjack-verifier/src/: main.rs
services/common/: Cargo.toml
services/common/src/: accounts.rs  balances.rs  blackjack.rs  chain.rs  config.rs  deposits.rs  infra.rs  lib.rs  migrations.rs  persistence.rs  rewards.rs  runtime.rs  telemetry.rs  web.rs  withdrawals.rs
services/deposit-executor/: index.mjs  index.test.mjs  package.json
services/deposit-router/: Cargo.toml
services/deposit-router/src/: main.rs
services/game-coordinator/: Cargo.toml
services/game-coordinator/src/: main.rs
services/indexer/: Cargo.toml
services/indexer/src/: main.rs
services/migrations/: 001_initial.sql  002_blackjack_views.sql  003_dice_commitments.sql  004_roulette_commitments.sql  005_baccarat_commitments.sql  006_player_profiles.sql  007_privy_starknet_wallets.sql  008_drop_privy_wallet_links.sql  009_optional_player_usernames.sql  010_deposit_router.sql  011_user_accounts_and_vault.sql  012_withdrawal_requests.sql  013_auth_only_accounts.sql  014_chain_level_deposit_addresses.sql  015_vault_event_indexer.sql  016_rewards.sql  017_reward_claim_intents.sql  018_reward_coupons.sql  019_player_funding_accounts.sql
services/privy-bridge/: index.js  index.test.js  package-lock.json  package.json
services/relayer/: Cargo.toml
services/relayer/src/: main.rs
