[workspace]
members = [
    "services/blackjack-prover",
    "services/blackjack-verifier",
    "services/common",
    "services/deposit-router",
    "services/game-coordinator",
    "services/indexer",
    "services/relayer",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2", "json", "macros", "tokio", "ws"] }
bs58 = "0.5.1"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["arithmetic"] }
num-bigint = "0.4.6"
poseidon-bn128 = "0.1.1"
redis = { version = "0.32.7", features = ["tokio-comp"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha3 = "0.10.8"
sqlx = { version = "0.8.6", features = ["migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
starknet = "0.17.0"
starknet-crypto = "0.8.1"
scalarff = { version = "0.4.0", features = ["alt_bn128"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }
