[package]
name = "moros-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
num-bigint.workspace = true
poseidon-bn128.workspace = true
redis.workspace = true
scalarff.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
