[package]
name = "moros-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
hex.workspace = true
moros-common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
sqlx.workspace = true
starknet.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
